--- a/webconsole/src/components/Profile/Profile.css
+++ b/webconsole/src/components/Profile/Profile.css
@@ -60,3 +60,35 @@
   width: 200px;
   height: 30px;
 }
+
+.message {
+  color: red;
+}
+
+.btn-cancel {
+  margin-top: 20px;
+  padding: 12px;
+  background-color: #ccc;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 80%;
+}
+
+.btn-submit {
+  margin-top: 20px;
+  padding: 12px;
+  background-color: #007c72;
+  color: white;
+  font-size: 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 80%;
+}
+
+.signup-btn:hover {
+  background-color: #001c4f;
+}
