--- a/webconsole/src/components/Signup/Signup.css
+++ b/webconsole/src/components/Signup/Signup.css
@@ -5,7 +5,7 @@
 }
 
 .form-container {
-  background-color: #d3e6c6; /* light green background */
+  background-color: #d3e6c6;
   padding: 40px;
   max-width: 600px;
   margin: 100px auto;
@@ -57,21 +57,4 @@ input {
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 4px;
-}
-
-/* Signup Button */
-.signup-btn {
-  margin-top: 20px;
-  padding: 12px;
-  background-color: #00256b;
-  color: white;
-  font-size: 1rem;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  width: 100%;
-}
-
-.signup-btn:hover {
-  background-color: #001c4f;
 }
