--- a/webconsole/src/components/Users/Users.css
+++ b/webconsole/src/components/Users/Users.css
@@ -14,4 +14,15 @@
 
 .user-search {
   margin-left: auto;
+  text-align: right;
+}
+
+.user-section {
+  display: flex;
+  justify-content: space-between;
+}
+
+.user-section h3 {
+  margin-top: 1rem;
+  font-size: x-large;
 }
