--- a/webconsole/src/components/Resources/Resources.css
+++ b/webconsole/src/components/Resources/Resources.css
@@ -70,3 +70,12 @@ button:hover {
 .text {
   flex-grow: 1;
 }
+
+.resource-section {
+  overflow-y: scroll;
+}
+
+.resource-section h2 {
+  text-align: left;
+  margin-bottom: 2rem;
+}
